# Antalk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ops/output/debug/debug_linux_x64/app/: antalk_client  apigw_svr
pkg/output/debug/debug_linux_x64/app/: data_svr
src/app/apigw/: CMakeLists.txt  server_impl.cpp  server_impl.h  server_main.cpp
src/app/auth/: CMakeLists.txt  server_config.h  server_impl.cpp  server_impl.h  server_main.cpp  stub_manager.h
src/app/common/: common.h
src/app/common/proto/: CMakeLists.txt  IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.BaseDefine.proto  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.Buddy.proto  IM.File.pb.cc  IM.File.pb.h  IM.File.proto  IM.Group.proto  IM.Login.pb.cc  IM.Login.pb.h  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.pb.cc  IM.Server.pb.h  IM.Server.proto  IM.SwitchService.proto  Makefile  apigw.pb.cc  apigw.pb.h  apigw.proto  auth.pb.cc  auth.pb.h  auth.proto  common.pb.cc  common.pb.h  common.proto  create.sh  data.base.proto  data.pb.cc  data.pb.h  data.proto  data.user.pb.cc  data.user.pb.h  data.user.proto  im.base.pb.cc  im.base.pb.h  (+13 more)
src/app/data/: CMakeLists.txt  cache_manager.cpp  cache_manager.h  data_manager.cpp  data_manager.h  db_manager.h  server_config.cpp  server_config.h  server_impl.cpp  server_impl.h  server_main.cpp
src/app/login/: CMakeLists.txt  msg_server.cpp
src/app/msg/: CMakeLists.txt  server_impl.cpp  server_impl.h  server_main.cpp
src/app/user/: CMakeLists.txt  server_impl.cpp  server_impl.h  server_main.cpp  stub_manager.cpp
src/dep/db/: db_handle_mgr.h  db_pool_mgr.h
src/dep/db/redis/: redis_channel.h  redis_cmd.h  redis_mgr.h  redis_string.cpp  redis_string.h
src/dep/queue/: queue_handle_mgr.h  queue_mgr.h
src/dep/queue/phxqueue/: phxqueue_handle_mgr.cpp  phxqueue_handle_mgr.h
src/dep/tt_base/: CMakeLists.txt  ImPduBase.h  imconn.cpp
tools/scripts/: antalk.sql  create_db.sh
tools/test/functest/: CMakeLists.txt  client_main.cpp
tools/test/tt_test/: CMakeLists.txt  Client.cpp  ClientConn.cpp
